/*#ifndef IBLUETOOTH
#define IBLUETOOTH

class IBluetooth
{
public:
  virtual void DataTransmitor() const=0;
};

#endif*/