/*#ifndef ICONVERTER
#define ICONVERTER

class IConverter
{
public:
  virtual void DataLine() const=0;
};

#endif*/